[project]
name = "airspace_renderer"
version = "0.0.1"
description = "A Python library for turning textual description of airspace geometries into machine-readable geospatial data"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "pyproj>=3.7.1",
    "shapely>=2.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "airspace_renderer",
    "folium>=0.19.7",
    "geopandas>=1.1.0",
    "isort>=6.0.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "mypy>=1.16.0",
    "ruff>=0.11.10",
    "types-geopandas>=1.0.1.20250601",
    "types-shapely>=2.1.0.20250512",
]

[tool.uv.sources]
airspace_renderer = { workspace = true }
